--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/reset.css">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="./src/style/reset.css">
+    <link rel="stylesheet" href="./src/style/style.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -13,7 +13,7 @@
     <header>
         <div class="header">
             <h1>Tech Blog</h1>
-           <img class="responsivo" src="../img/menu.png" alt="" >
+           <img class="responsivo" src="./src/img/menu.png" alt="" >
            
         </div>
     </header>
@@ -58,7 +58,7 @@
                 </li>
                 <div class="profile">
                     <span class="profile-img">
-                        <img src="../img/profile.png" alt="Imagem de perfil">    
+                        <img src="./src/img/profile.png" alt="Imagem de perfil">    
                     </span>
                     <span>
                         <p class="name">Guilherme Chinaglia</p>
@@ -67,6 +67,6 @@
                 </div>
             </ul>
         </nav>
-        <script src="../js/index.js"></script>
+        <script src="./src/js/index.js"></script>
 </body>
 </html>
